unpackaged/main/default/objects/Interface_Response__c/Interface_Response__c.object-meta.xml
<CustomObject>
    <label>Interface Response</label>
    <nameField>
        <label>Interface Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interface Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>