unpackaged/main/default/objects/Interface_Response__c/fields/CRM_Number__c.field-meta.xml
<CustomField>
    <fullName>CRM_Number__c</fullName>
    <label>CRM Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>