unpackaged/main/default/objects/Interface_Response__c/fields/Interface_Name__c.field-meta.xml
<CustomField>
    <fullName>Interface_Name__c</fullName>
    <label>Interface Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Intf_InterfaceName</valueSetName>
    </valueSet>
</CustomField>