unpackaged/main/default/objects/Interface_Response__c/fields/Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Message_Id__c</fullName>
    <label>Message Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>