unpackaged/main/default/objects/Interface_Response__c/fields/Treatment_Message__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Message__c</fullName>
    <label>Treatment Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>