unpackaged/main/default/objects/Interface_Response__c/fields/Treatment_Status__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Status__c</fullName>
    <label>Treatment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>