unpackaged/main/default/objects/Interface_Response__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Interface_Name__c</columns>
    <columns>Message_Id__c</columns>
    <columns>CRM_Number__c</columns>
    <columns>ERP_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Response_Message__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>